<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/prayer1"
    tools:context=".view.DetailActivity">


    <ImageView
        android:id="@+id/imageViewPrayer4"
        android:layout_width="64dp"
        android:layout_height="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/prayer4" />

    <TextView
        android:id="@+id/textViewCounty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:text="@string/county"
        android:textAlignment="center"
        android:textColor="@color/county"
        android:layout_marginTop="24dp"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/imageViewPrayer4"

        >

    </TextView>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dark"
        android:orientation="vertical"
        android:paddingHorizontal="24dp"
        android:paddingVertical="24dp"
        app:layout_constraintBottom_toTopOf="@+id/saveBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCounty"
        app:layout_constraintVertical_bias="0.493">

        <TextView
            android:id="@+id/textViewCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/prayer_time_for_city"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold">

        </TextView>

        <TextView
            android:id="@+id/textViewImsak"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/Imsak"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="bold">


        </TextView>

        <TextView
            android:id="@+id/textViewGunes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/Gunes"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="bold">


        </TextView>

        <TextView
            android:id="@+id/textViewOgle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/Ogle"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="bold">

        </TextView>

        <TextView
            android:id="@+id/textViewIkindi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/Ikindi"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="bold">

        </TextView>

        <TextView
            android:id="@+id/textViewAksam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/Aksam"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="bold">

        </TextView>

        <TextView
            android:id="@+id/textViewYatsi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/Yatsi"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="bold">

        </TextView>


    </LinearLayout>

    <Button
        android:id="@+id/saveBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:backgroundTint="#00212d"
        android:onClick="saveButtonOnClicked"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>